erDiagram
    USER {
        string clerkId PK
        string email
        string username
        datetime createdAt
    }

    LOCATION {
        string googlePlaceId PK
        string name
        string address
        number rating
        string priceLevel
        datetime createdAt
    }

    ORDER {
        string orderId PK
        string userId FK
        string locationId FK
        string description
        datetime createdAt
    }

    SUBSCRIBER {
        string publisherId FK
        string subscriberId FK
        string status
        datetime createdAt
    }

    USER ||--o{ ORDER : "creates"
    LOCATION ||--o{ ORDER : "is ordered at"
    USER ||--o{ SUBSCRIBER : "acts as publisher"
    USER ||--o{ SUBSCRIBER : "acts as subscriber"
